--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -23,7 +23,7 @@
   <% } else { %>
     <div class="deck-list deck-list-empty">
       <h1>Devour Data. Devour Information. Set Yourself Free.</h1>
-      <img src="http://res.cloudinary.com/tpayne/image/upload/s--H7739awF--/q_jpegmini/v1436435373/demo_qnycnc.jpg" height="500" width="800" alt="Demo">
+      <img src="http://res.cloudinary.com/tpayne/image/upload/s--OY77ymbs--/q_jpegmini/v1437893128/Screen_Shot_2015-07-25_at_11.43.55_PM_tlhhrb.jpg" height="340" width="560" alt="Demo"><br>
       <button class="btn deck-list" id="guide"><a href="#/publicIndex">Go To Public Decks</a></button>
       <h2>Go To Public Decks or Add Your Own. Memorize Everything. Learn At Your Own Pace.</h2><br>
       <h3>
