--- a/app/assets/templates/deck/show.jst.ejs
+++ b/app/assets/templates/deck/show.jst.ejs
@@ -8,6 +8,17 @@
     <div class="row">
       <button type="button" class="btn btn-default go-to-add-cards col-xs-12">Add Cards</button>
     </div>
+    <div class="row controls">
+      <h3>Controls:</h3>
+      <div class="space-bar">
+        <img src="http://www.wpclipart.com/computer/keyboard_keys/large_keys/computer_key_Space_bar_T.png" width="100" height="40" alt="spacekey">
+        <span class="space-key-control">: Reveal Card</span><br>
+      </div>
+      <div class="number-keys">
+        <img src="http://www.typingguide.com/images/keyboard-numberpad.gif" width="100" height="40" alt="spacekey">
+        <span class="number-key-control">0-5 keys to submit your response!</span>
+      </div>
+    </div>
   </aside>
 
   <ul class="deck cards-list cards-show quiz quiz-index col-md-5" id="quiz"></ul>
