--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -12,26 +12,22 @@
     </div>
 
     <div class="collapse navbar-collapse" id="devour-navbar-collapse">
-      <a class="navbar-brand col-xs-4" href="/">
+      <a class="navbar-brand col-xs-3" href="/">
         <img id="brand" src="http://farm1.staticflickr.com/551/18692277976_73ce78935a_b.jpg" height="100" width="100" alt="Eat memory for dinner">
       </a>
       <% if (currentUser) { %>
-      <ul class="nav navbar-nav col-xs-4">
+      <ul class="nav navbar-nav col-xs-6">
         <div class="row">
-          <li class="col-md-3 col-xs-12"><a class="navbar-link" href="#">Decks</a></li>
-          <li class="col-md-3 col-xs-12"><a class="navbar-link" href="#/decks/new">Create</a></li>
-          <li class="col-md-3 col-xs-12"><a class="navbar-link" href="#/search">Search</a></li>
-          <li class="col-md-3 col-xs-12"><a class="navbar-link" href="#/publicIndex">Public Directory</a></li>
-        </div>
-        <div class="row">
-          <li class="col-md-3 col-xs-12"><a class="navbar-link" href="#/leaderboard">Leader Board</a></li>
-          <li class="col-md-3 col-xs-12"><a class="navbar-link" href="#/usersIndex">Contact Users</a></li>
-          <li class="col-md-3 col-xs-12"><a class="navbar-link" href="#/messages">Messages</a></li>
-          <li class="col-md-3 col-xs-12"><a class="navbar-link" href="#/forum">Forum</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#">Decks</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#/publicIndex">Public Directory</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#/leaderboard">Leader Board</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#/usersIndex">Contact Users</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#/messages">Messages</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#/forum">Forum</a></li>
         </div>
       </ul>
       <% } else { %>
-      <ul class="nav navbar-nav col-xs-4">
+      <ul class="nav navbar-nav col-xs-3">
         <li id="slogan-list-item" class="col-xs-offset-3 col-xs-6"><span id="slogan" class="navbar-brand">Memorization. Made Easy. Get Your Full.</span></li>
       </ul>
       <% } %>
