--- a/app/assets/templates/deck/publicIndex.jst.ejs
+++ b/app/assets/templates/deck/publicIndex.jst.ejs
@@ -1,7 +1,7 @@
 <ul class="deck-list">
-  <div class="jumbotron">
+  <div class="page-header">
     <h1>Time to eat!</h1>
-    <p>Public Directory: Fork any decks of your liking, and they will be added to Your Collection.</p>
+    <h2>Public Directory: Add Decks to Your Collection.</h2>
   </div>
 
 
