--- a/app/assets/templates/reddit/RedditIndex.jst.ejs
+++ b/app/assets/templates/reddit/RedditIndex.jst.ejs
@@ -1,5 +1,5 @@
 <div class="forum-index">
-    <h1 class="jumbotron" style="color: black;">Welcome to the Devour.Space Forum.</h1><br>
+    <h1 class="page-header">Welcome to the Devour.Space Forum.</h1><br>
     <div class="subreddit-list">
       <ul class="col-xs-12">
         <button class="btn btn-block btn-default">Create A Sub-Forum</button>
