--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -18,16 +18,16 @@
       <% if (currentUser) { %>
       <ul class="nav navbar-nav col-xs-6">
         <div class="row">
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#">Decks</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#/publicIndex">Public Directory</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#/leaderboard">Leader Board</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#/usersIndex">Contact Users</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#/messages">Messages</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link" href="#/forum">Forum</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#">Collection</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/publicIndex">Decks</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/leaderboard">Leaders</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/usersIndex">Users</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/messages">Messages</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/forum">Forum</a></li>
         </div>
       </ul>
       <% } else { %>
-      <ul class="nav navbar-nav col-xs-3">
+      <ul class="nav navbar-nav col-xs-6">
         <li id="slogan-list-item" class="col-xs-offset-3 col-xs-6"><span id="slogan" class="navbar-brand">Memorization. Made Easy. Get Your Full.</span></li>
       </ul>
       <% } %>
