Fix text colors

--- a/app/assets/templates/deck/show.jst.ejs
+++ b/app/assets/templates/deck/show.jst.ejs
@@ -12,11 +12,11 @@
       <h3>Controls:</h3>
       <div class="space-bar">
         <img src="http://www.wpclipart.com/computer/keyboard_keys/large_keys/computer_key_Space_bar_T.png" width="100" height="40" alt="spacekey">
-        <span class="space-key-control" style="color: black;">: Reveal Card</span><br>
+        <span class="space-key-control" style="color: white;">: Reveal Card</span><br>
       </div>
       <div class="number-keys">
         <img src="http://www.typingguide.com/images/keyboard-numberpad.gif" width="100" height="40" alt="spacekey">
-        <span class="number-key-control" style="color: black;">0-5 keys to submit your response!</span>
+        <span class="number-key-control" style="color: white;">0-5 keys to submit your response!</span>
       </div>
     </div>
   </aside>
