Clean up splash page

--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -33,7 +33,7 @@
       <button class="btn deck-list" id="guide"><a href="#/publicIndex">Go To Public Decks</a></button>
       <div class="jumbotron">
         <h2>- Quiz yourself on flashcards. Submit responses based off your recall</h2>
-        <h2>Use Public Decks or Add Your Own. Learn At Your Own Pace.</h2><br>
+        <h2>- Use Public Decks or Add Your Own. Learn At Your Own Pace.</h2><br>
         <h3>
           Devour is a program which makes remembering things easy.
            Because it's a lot more efficient than traditional study methods, you can either greatly decrease your time spent studying, or greatly increase the amount you learn.
