--- a/app/assets/templates/deck/show.jst.ejs
+++ b/app/assets/templates/deck/show.jst.ejs
@@ -1,7 +1,7 @@
 <div class="deck-show">
 
   <aside class="col-xs-2 quiz-sizebar">
-    <h2 class="col-xs-12 sidebar-header"><%= deck.escape('title') %><span style="color: tomato;" class="fa fa-heart"></span></h2>
+    <h2 class="col-xs-12 sidebar-header" style="color: black;"><%= deck.escape('title') %><span style="color: tomato;" class="fa fa-heart"></span></h2>
     <div class="row">
       <button type="button" class="btn btn-default go-to-data col-xs-12">See your data!</button>
     </div>
