--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -21,7 +21,7 @@
           <a href="#/decks/<%=deck.id%>" class="btn btn-default btn-block" style="color: black;">Devour <%= deck.escape('title') %>!</a>
         </div>
         <div class="btn-group btn-group-lg">
-          <a class="btn btn-blue btn-block" style="color: white;" id="deck-options" href="#decks/<%=deck.id%>/data"><span>See Your Schedule!</span></a>
+          <a class="btn btn-blue btn-block" style="color: white; display: none;" id="deck-options" href="#decks/<%=deck.id%>/data"><span>See Your Schedule!</span></a>
         </div><br>
       </li>
     </div>
