--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -3,8 +3,7 @@
   <% if (decks.length > 0) { %>
     <div class="jumotron">
       <h1 style="color: aliceblue">
-        Difficult cards will be scheduled more often. Devour will not waste your time over-reviewing.
-        Get to work and beat my score.
+        Remember Things Easy.
     </h1>
   </div>
     <% decks.each(function(deck) { %>
@@ -29,8 +28,8 @@
   <% } else { %>
     <div class="deck-list deck-list-empty" id="deck-list-empty">
       <h1 style="color: aliceblue">Devour Information. Set Yourself Free.</h1>
-      <img src="http://res.cloudinary.com/tpayne/image/upload/s--OY77ymbs--/q_jpegmini/v1437893128/Screen_Shot_2015-07-25_at_11.43.55_PM_tlhhrb.jpg" height="340" width="760" alt="Demo"><br>
-      <button class="btn deck-list" id="guide"><a href="#/publicIndex">Go To Public Decks</a></button>
+      <img src="http://res.cloudinary.com/tpayne/image/upload/s--7CmiBSk8--/q_jpegmini/v1437980436/devour-sample_jp8y3c.jpg" height="400" width="860" alt="Demo"><br>
+      <button class="btn deck-list public-list" id="guide"><a href="/#/publicIndex">Go To Public Decks</a></button>
       <div class="jumbotron">
         <h2>- Quiz yourself on flashcards. Submit responses based off your recall</h2>
         <h2>- Use Public Decks or Add Your Own. Learn At Your Own Pace.</h2><br>
