Confuse myself less. Change background and fonts

--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -2,7 +2,7 @@
 <ul class="deck-list" id="index">
   <% if (decks.length > 0) { %>
     <div class="jumotron">
-      <h1 style="color: aliceblue">
+      <h1 style="color: gold">
         Remember Things Easy.
     </h1>
   </div>
@@ -27,7 +27,7 @@
     <% }); %>
   <% } else { %>
     <div class="deck-list deck-list-empty" id="deck-list-empty">
-      <h1 style="color: aliceblue">Devour Information. Set Yourself Free.</h1>
+      <h1 style="color: gold">Remember Things Easy.</h1>
       <img src="http://res.cloudinary.com/tpayne/image/upload/s--7CmiBSk8--/q_jpegmini/v1437980436/devour-sample_jp8y3c.jpg" height="400" width="860" alt="Demo"><br>
       <button class="btn deck-list public-list" id="guide"><a href="/#/publicIndex">Go To Public Decks</a></button>
       <div class="jumbotron">
