--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -31,7 +31,7 @@
       <img src="http://res.cloudinary.com/tpayne/image/upload/s--7CmiBSk8--/q_jpegmini/v1437980436/devour-sample_jp8y3c.jpg" height="400" width="860" alt="Demo"><br>
       <button class="btn deck-list public-list" id="guide"><a href="/#/publicIndex">Go To Public Decks</a></button>
       <div class="jumbotron">
-        <h2>- Quiz yourself on flashcards. Submit responses based off your recall</h2>
+        <h2>- Quiz yourself on flashcards. Submit responses based off your recall.</h2>
         <h2>- Use Public Decks or Add Your Own. Learn At Your Own Pace.</h2><br>
         <h3>
           Devour is a program which makes remembering things easy.
