--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -13,7 +13,7 @@
 
     <div class="collapse navbar-collapse" id="devour-navbar-collapse">
       <a class="navbar-brand col-xs-3" href="/">
-        <img id="brand" src="http://farm1.staticflickr.com/551/18692277976_73ce78935a_b.jpg" height="100" width="100" alt="Eat memory for dinner">
+        <img id="brand" src="http://farm1.staticflickr.com/551/18692277976_73ce78935a_b.jpg" height="225%" width="100" alt="Eat memory for dinner">
       </a>
       <% if (currentUser) { %>
       <ul class="nav navbar-nav col-xs-6">
