--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -19,11 +19,12 @@
       <ul class="nav navbar-nav col-xs-6">
         <div class="row">
           <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#">Collection</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/publicIndex">Decks</a></li>
+          <li class="col-md-1 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/publicIndex">Public Decks</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center; margin-left: 7%;" href="#/decks/new">Create</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/search">Search</a></li>
           <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/leaderboard">Leaders</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/usersIndex">Users</a></li>
+          <li class="col-md-1 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center; margin-right: 7%;" href="#/usersIndex">Users</a></li>
           <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/messages">Messages</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/forum">Forum</a></li>
         </div>
       </ul>
       <% } else { %>
