Add forum basics

--- a/app/assets/templates/reddit/RedditIndex.jst.ejs
+++ b/app/assets/templates/reddit/RedditIndex.jst.ejs
@@ -1,7 +1,7 @@
 <div class="forum-index">
     <h1 class="page-header">Welcome to the Devour.Space Forum.</h1><br>
+    <ul class="subreddits">
 
-
-
+    </ul>
 
 </div>
