Scaffolding; seperate away more forum files and logic; make PostItem view; render Subs through JBuilder template; Add forum back to navbar; get Posts to render

--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -24,7 +24,7 @@
           <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/search">Search</a></li>
           <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/leaderboard">Leaders</a></li>
           <li class="col-md-1 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center; margin-right: 7%;" href="#/usersIndex">Users</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/messages">Messages</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/forum">Forum</a></li>
         </div>
       </ul>
       <% } else { %>
