--- a/app/assets/templates/card/show.jst.ejs
+++ b/app/assets/templates/card/show.jst.ejs
@@ -13,7 +13,10 @@
           <%= card.escape('question') %>
         </h1>
         <button type="submit" id="show-answer" class="btn btn-lg btn-block btn-primary btn-reveal">Reveal Answer</button>
-        <button type="submit" class="btn btn-lg btn-block edit-card edit-button">Edit Card</button>
+        <% if ($('#current-user').data('id') === $('#deck-owner').data('deck-owner')) { %>
+          <button type="submit" class="btn btn-lg btn-block edit-card edit-button">Edit Card</button>
+        <% } %>
+
         <div class="card answer-box"></div>
       </div>
     </div><br>
