Render UserVote count for each post

--- a/app/assets/templates/reddit/RedditShow.jst.ejs
+++ b/app/assets/templates/reddit/RedditShow.jst.ejs
@@ -1,10 +1,10 @@
 <div class="subreddit-show">
   <h1><%= model.escape('title') %></h1>
-  <table class="posts table table-striped">
+  <table class="posts table">
     <thead>
       <tr>
-        <th>Posts</th>
-        <th>Votes</th>
+        <th style="color: white;">Posts</th>
+        <th style="color: white;">Votes</th>
       </tr>
     </thead>
     <tbody class="posts-table"></tbody>
