--- a/app/assets/templates/reddit/post/PostItem.jst.ejs
+++ b/app/assets/templates/reddit/post/PostItem.jst.ejs
@@ -1,2 +1,2 @@
-<td class="post-title"><%= post.escape('title') %></td>
-<td class="post-url"></td>
+<td class="post-title"><a href="#/forum/posts/<%=post.id%>"><%= post.escape('title') %></a></td>
+<td class="post-votes user-votes"><%= post.escape('userVotes').length %></td>
