Clean up Navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="http://res.cloudinary.com/tpayne/image/upload/c_scale,h_16,w_16/v1434735465/devour_bear_w2f1qs.ico">
 </head>
 <div>
   <% if current_user %>
