--- a/app/assets/templates/reddit/RedditIndex.jst.ejs
+++ b/app/assets/templates/reddit/RedditIndex.jst.ejs
@@ -1,5 +1,6 @@
 <div class="forum-index">
     <h1 class="page-header">Welcome to the Devour.Space Forum. Coming Soon.</h1><br>
+    <a href="#/forum/subs/new" style="color: white;"><span>Create a New Subforum</span></a>
     <ul class="subreddits">
 
     </ul>
