Fix and add Backbone methods to Forum; change 'addCardSubview' to 'switchCardSubview' in DeckShow; parse data for comments and child comments by initializing the parsing in the top_level_comments method for Post(mimicking some behavior from RedditOnRails again)

--- a/app/assets/templates/reddit/comment/commentItem.jst.ejs
+++ b/app/assets/templates/reddit/comment/commentItem.jst.ejs
@@ -1,1 +1,4 @@
-<p class="jumbotron"><%= comment.escape('body') %></p>
+<p class="jumbotron">
+    <%= comment.escape('body') %>
+    <ul class="child-comments" id="<%=comment.id%>"></ul>
+</p>
