--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -12,15 +12,15 @@
     </div>
 
     <div class="collapse navbar-collapse" id="devour-navbar-collapse">
-      <a class="navbar-brand col-xs-3" href="/">
+      <a class="navbar-brand col-xs-2" href="/">
         <img id="brand" src="http://farm1.staticflickr.com/551/18692277976_73ce78935a_b.jpg" height="225%" width="100" alt="Eat memory for dinner">
       </a>
       <% if (currentUser) { %>
-      <ul class="nav navbar-nav col-xs-6">
+      <ul class="nav navbar-nav col-xs-8">
         <div class="row">
           <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#">Collection</a></li>
           <li class="col-md-1 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/publicIndex">Public Decks</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center; margin-left: 10%;" href="#/decks/new">Create</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center; margin-left: 25%;" href="#/decks/new">Create</a></li>
           <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/search">Search</a></li>
           <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/leaderboard">Leaders</a></li>
           <li class="col-md-1 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center; margin-right: 7%;" href="#/usersIndex">Users</a></li>
@@ -28,8 +28,8 @@
         </div>
       </ul>
       <% } else { %>
-      <ul class="nav navbar-nav col-xs-6">
-        <li id="slogan-list-item" class="col-xs-offset-3 col-xs-6"><span id="slogan" class="navbar-brand">Memorization. Made Easy. Get Your Full.</span></li>
+      <ul class="nav navbar-nav col-xs-8">
+        <li id="slogan-list-item" class="col-xs-offset-3 col-xs-6"><span id="slogan" class="navbar-brand">Memorization. Made Easy.<br> Get Your Full.</span></li>
       </ul>
       <% } %>
 
