--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -20,11 +20,12 @@
         <div class="row">
           <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#">Collection</a></li>
           <li class="col-md-1 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/publicIndex">Public Decks</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center; margin-left: 25%;" href="#/decks/new">Create</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/search">Search</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/leaderboard">Leaders</a></li>
+          <li class="col-md-1 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/decks/new">Create</a></li>
+          <li class="col-md-1 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/search">Search</a></li>
+          <li class="col-md-1 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center;" href="#/leaderboard">Leaders</a></li>
           <li class="col-md-1 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center; margin-right: 7%;" href="#/usersIndex">Users</a></li>
-          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center; margin-left: 10%;" href="#/forum">Forum</a></li>
+          <li class="col-md-2 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center; margin-right: 7%;" href="#/messages">Messages</a></li>
+          <li class="col-md-3 col-xs-12 nav-link"><a class="navbar-link navbar-btn" style="text-align: center; margin-left: 10%;" href="#/forum">Forum</a></li>
         </div>
       </ul>
       <% } else { %>
