Create 'author_name' virtual attribute to pass with comments to label them with a correctly protected username

--- a/app/assets/templates/reddit/comment/commentItem.jst.ejs
+++ b/app/assets/templates/reddit/comment/commentItem.jst.ejs
@@ -1,4 +1,7 @@
 <p class="jumbotron">
-    <%= comment.escape('body') %>
+    <p><%= comment.escape('body') %></p>
+
+    <span><%= comment.escape('author_name') %></span>
+
     <ul class="child-comments" id="<%=comment.id%>"></ul>
 </p>
