Install git on windows, configure gems to work on workstation, fix white color in textarea of new-card

--- a/app/assets/stylesheets/cards.css
+++ b/app/assets/stylesheets/cards.css
@@ -80,6 +80,10 @@ button.edit-button {
   padding: 8px 25px 8px 25px;
 }
 
+.create-card {
+  color: black;
+}
+
 .btn-red {
   background: #c0392b;
 }
