--- a/app/assets/templates/reddit/RedditShow.jst.ejs
+++ b/app/assets/templates/reddit/RedditShow.jst.ejs
@@ -1,5 +1,6 @@
 <div class="subreddit-show">
   <h1><%= model.escape('title') %></h1>
+  <h2><a href="#/forum/posts/new">Create New Post!</h2>
   <table class="posts table">
     <thead>
       <tr>
