Clean up header;remove text from 'create-deck' form

--- a/app/assets/templates/deck/form.jst.ejs
+++ b/app/assets/templates/deck/form.jst.ejs
@@ -1,4 +1,4 @@
-<h1 class="main-header">Create a new deck for us to Devour!! I'm hungry!</h1>
+<h1 class="main-header">Create a new deck for us to Devour!</h1>
 
 <form class="deck new-deck deck-form form-inline" id="deck-form" action="/api/decks/" method="post">
   <input type="hidden" name="deck[owner_id]" value="<%= $('div#current-user').data('id') %>">
