--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -30,7 +30,7 @@
       </ul>
       <% } else { %>
       <ul class="nav navbar-nav col-xs-8">
-        <li id="slogan-list-item" class="col-xs-offset-3 col-xs-6"><span id="slogan" class="navbar-brand">Memorization. Made Easy.<br> Get Your Full.</span></li>
+        <li id="slogan-list-item" class="col-xs-offset-3 col-xs-6"><span id="slogan" class="navbar-brand">Memorization. Made Easy. Get Your Full.</span></li>
       </ul>
       <% } %>
 
