Fix logic in Bb CardShow view; change '$('#deck-owner').data('deck-owner')' to '.data('owner-id')'

--- a/app/assets/templates/card/show.jst.ejs
+++ b/app/assets/templates/card/show.jst.ejs
@@ -13,7 +13,7 @@
           <%= card.escape('question') %>
         </h1>
         <button type="submit" id="show-answer" class="btn btn-lg btn-block btn-primary btn-reveal">Reveal Answer</button>
-        <% if ($('#current-user').data('id') === $('#deck-owner').data('deck-owner')) { %>
+        <% if ($('#current-user').data('id') === $('#deck-owner').data('owner-id')) { %>
           <button type="submit" class="btn btn-lg btn-block edit-card edit-button">Edit Card</button>
         <% } %>
 
