--- a/app/assets/templates/deck/show.jst.ejs
+++ b/app/assets/templates/deck/show.jst.ejs
@@ -22,5 +22,5 @@
     </div>
   </aside>
 
-  <ul class="deck cards-list cards-show quiz quiz-index col-md-5" id="quiz"></ul>
+  <div class="deck cards-list cards-show quiz quiz-index col-md-5" id="quiz"></div>
 </div>
